CFF alignment issues

--- a/app/Resources/VaadinWidgetSet_V7/vaadin-widgetset/src/main/webapp/VAADIN/themes/stpl/styles.scss
+++ b/app/Resources/VaadinWidgetSet_V7/vaadin-widgetset/src/main/webapp/VAADIN/themes/stpl/styles.scss
@@ -2,4 +2,10 @@
 
 .stpl {
   @include stpl;
+
+}
+
+  .v-slot, .v-spacing {
+    display: inline;
+    padding-right: 5px;
 }
